# Fast-Camp---Web

./: .gitignore
Card 3 - Prática: Iniciando com TypeScript (II)/Codigos Aula/: tsconfig.json
Card 3 - Prática: Iniciando com TypeScript (II)/Codigos Pessoal/: package-lock.json  package.json  tsconfig.json
Card_12-Pratica_Projeto_Final-Part1/frontend/: .gitignore  README.md  package-lock.json  package.json
Card_13-Pratica_Projeto-Final-Part2/: .env.example  docker-compose.yml
Card_13-Pratica_Projeto-Final-Part2/backend/: .dockerignore  Dockerfile
Card_14-Pratica_Projeto-Final-Part-Final/: .env.example  README.md  docker-compose.yml
Card_14-Pratica_Projeto-Final-Part-Final/backend/: Dockerfile  README.md  pyproject.toml
Card_14-Pratica_Projeto-Final-Part-Final/backend/migrations/: env.py
Card_14-Pratica_Projeto-Final-Part-Final/backend/migrations/versions/: 2ce92a5c89ae_create_users_and_password_reset_tokens.py  a9b8c7d6e5f4_add_ondelete_cascade_to_foreign_keys.py  c3d4e5f6a7b8_add_login_lockout_fields.py  d4e5f6a7b8c9_add_schedule_event_completed_at.py  d8a2b5c4e7f1_create_chat_messages.py  e5f6a7b8c9d0_add_token_billing.py  f1a2b3c4d5e6_drop_now_defaults_on_new_tables.py
Card_14-Pratica_Projeto-Final-Part-Final/backend/organiza_ia_api/: ai.py  app.py  billing_service.py  models.py  schedule_service.py  schemas.py  security.py  settings.py
Card_14-Pratica_Projeto-Final-Part-Final/backend/organiza_ia_api/routers/: auth.py  billing.py  chat.py  metrics.py  password_reset.py  schedule.py  users.py
Card_14-Pratica_Projeto-Final-Part-Final/backend/tests/: conftest.py  test_app.py  test_auth.py  test_billing.py  test_chat.py  test_chat_tools.py  test_metrics.py  test_password_reset.py  test_schedule.py  test_security.py  test_users.py
Card_14-Pratica_Projeto-Final-Part-Final/frontend/: .env.example  README.md  components.json  eslint.config.mjs  next.config.mjs  package-lock.json
Card_4-Fundamentos_do_React_com_TypeScript_e_Next.js/Codigo_Aula/: package.json
Card_4-Fundamentos_do_React_com_TypeScript_e_Next.js/Codigo_Aula_React/: package-lock.json  package.json
Card_7_-Integracao_com_Banco_de_Dados_usando_FastAPI/Codigo_Pessoal/: .env.example  docker-compose.yml
(+322 files in other folders)
