[project]
name = "organiza-ia-api"
version = "0.1.0"
description = "API do Organiza.IA - assistente de produtividade pessoal (Card_13, Part 2 do projeto final)"
authors = [
    {name = "SebenJose", email = "josecarlospc001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "typos (>=1.45.0,<2.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E501']

[tool.ruff.format]
preview = true
quote-style = 'single'
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.typos.files]
extend-exclude = ["*.md", "migrations"]

# Palavras em português (comentários e mensagens da API) que o typos
# confunde com erros de digitação de palavras em inglês.
[tool.typos.default.extend-words]
caracteres = "caracteres"
cliente = "cliente"
comando = "comando"
conter = "conter"
erro = "erro"
erros = "erros"
excede = "excede"
informe = "informe"
intencional = "intencional"
intervalos = "intervalos"
limite = "limite"
oficial = "oficial"
responde = "responde"
ser = "ser"
vai = "vai"
variante = "variante"

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check . && ruff format . --check'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev organiza_ia_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=organiza_ia_api -vv'
post_test = 'coverage html'
